first correction, to z-index, background-image(multiple blocks)& extra styles

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,8 +4,6 @@
 
 .card__title {
   margin: 0 0 32px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
