--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,6 @@
 
 .footer__column-heading {
   margin: 0 0 20px;
-  font-family: "Inter", "Arial", sans-serif;
   font-weight: bold;
   font-size: 16px;
   line-height: 20px;
@@ -30,7 +29,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  font-family: "Inter", "Arial", sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
@@ -56,7 +54,6 @@
 
 .footer__copyright {
   margin: 108px 0 0;
-  font-family: "Inter", "Arial", sans-serif;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
