--- a/blocks/form.css
+++ b/blocks/form.css
@@ -6,8 +6,6 @@
   margin: 0;
   padding: 0;
   border: none;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
@@ -21,8 +19,6 @@
   margin: 8px 0 32px;
   border: 1px solid #838383;
   border-radius: 4px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
@@ -36,8 +32,6 @@
   border-radius: 4px;
   color: #fff;
   margin-bottom: 32px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
