--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,7 +6,9 @@
   flex-direction: column;
   background-image: url(../images/background_header.svg);
   background-size: cover;
+  background-position: center;
   position: relative;
+  z-index: 1;
 }
 
 .header__image {
@@ -15,11 +17,11 @@
   right: 5px;
   width: 646px;
   height: 568px;
+  z-index: -1;
 }
 
 .header__title {
   margin: 183px 0 0;
-  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
@@ -54,7 +56,6 @@
 .header__paragraph {
   margin: 0;
   align-content: flex-end;
-  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
