--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -7,13 +7,12 @@
   background-image: url(../images/background_menu.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 .menu__title {
   margin: 0 0 24px;
   max-width: 780px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
