--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -12,12 +12,10 @@
 
 .nav__links {
   display: flex;
-  align-items: center;
   gap: 20px;
   list-style-type: none;
   padding: 0;
   margin: 0;
-  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
