--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,7 @@
   max-width: 1600px;
   min-width: 1100px;
   margin: auto;
-  font-family: Inter, Arial, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
 }
