--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -3,12 +3,12 @@
   background-color: #0a2750;
   padding: 100px 80px 215px;
   background-image: url(../images/background_recipes.svg);
+  background-position: center;
+  background-size: cover;
 }
 
 .recipes__title {
   margin: 0 0 24px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -18,7 +18,6 @@
 .recipes__subtitle {
   margin: 0 0 80px;
   font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
@@ -31,13 +30,20 @@
   gap: 40px;
   margin: 0;
   list-style-type: none;
+  padding: 0;
 }
 
 .recipes__iframe {
   border: none;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
+  margin: 24px 0 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
 }
