--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -9,8 +9,6 @@
 .reservation__title {
   margin: 0 0 80px;
   text-align: center;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
